<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_household_items_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HouseHoldItemsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/household_item_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/total_monthly_charge_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

        </androidx.recyclerview.widget.RecyclerView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_monthly_charge_container"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/household_item_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/total_estimated_value_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Estimated Value: $"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/total_estimated_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/total_estimated_value_header"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit_multi_selection_mode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:icon="@drawable/baseline_close_24"
                android:text="Exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/multi_tag_assign_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multi_tag_assign_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tags"
                app:icon="@drawable/baseline_playlist_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/multi_delete_button"
                app:layout_constraintStart_toEndOf="@id/exit_multi_selection_mode_button"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multi_delete_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Delete"
                app:icon="@drawable/baseline_delete_outline_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/multi_tag_assign_button"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="#03DAC5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/total_monthly_charge_container"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:contentDescription="Add item"
            app:srcCompat="@drawable/baseline_add_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
