...
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Delete"
                />
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Confirm"
                />

...
